# project-reasoner

./: README.md  pyproject.toml
docs/: event-storming.md  index.md  learning.md  prompting.md
project_reasoner/: knowledge_graph.py
project_reasoner/domain/: event.py
project_reasoner/good_vibrations/: types.py
project_reasoner/graph/: data.json  shapes.json
project_reasoner/project/: description.py  goal.py
project_reasoner/prompt/: template.py
project_reasoner/reasoning/: application.py
project_reasoner/reasoning/prompt/template/: commands.py  queries.py
src/: ref.py
src/project/: description.py  goal.py
study/: index.md  shacl.ipynb
study/shacl/: basic-example-shape.ipynb  shacl-json.ipynb
test/: test_ref.py
test/domain/: test_event.py
test/good_vibrations/: test_types.py
test/project/: test_description.py  test_goal.py
test/prompt/: test_promp_template.py  test_prompt_composer.py  test_prompt_template.py
test/reasoning/: test_reasoning_application.py
test/reasoning/prompt/template/: test_commands.py  test_queries.py
