[project]
name = "project-reasoner"
version = "0.1.0"
description = ""
authors = [
    {name = "James Cauwelier",email = "james@accelerated.dev"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.13.0,<4.0"
dependencies = [
    "mypy (>=1.11)",
    "rdflib (>=7.5.0,<8.0.0)",
    "pyshacl (>=0.30.1,<0.31.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
]
packages = [
    { include = "project_reasoner", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pylint = "^4.0.4"
black = "^25.12.0"
poetry-core = "^2.2.1"
mypy = "^1.19.0"

